[package]
name = "invalidstring"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "just for testing invalid string data"
readme = "README.md"
categories = ["development-tools", "development-tools::testing", "encoding"]


version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
[dependencies]
