[package]
name = "scopetime"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "log runtime of arbitrary scope"
readme = "README.md"
categories = ["development-tools::profiling"]

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }

[dependencies]
log = "0.4"

[features]
default =[]
enabled =[]
