[package]
name = "uu_cli"
version = "0.0.27"
authors = ["uutils developers"]
license = "MIT"
description = "basename ~ (uutils) display PATHNAME with leading directory components removed"

homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/basename"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

readme.workspace = true

[lib]
path = "src/cli.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true }

[[bin]]
name = "cli"
path = "src/main.rs"
