[package]
name = "uu_encrypt_privkey"
version = "0.0.27"
authors = ["uutils developers"]
license = "MIT"
description = "basename ~ (uutils) display PATHNAME with leading directory components removed"

homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/basename"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

readme.workspace = true

[lib]
path = "src/encrypt_privkey.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true }

[[bin]]
name = "encrypt-privkey"
path = "src/main.rs"
