[package]
name = "uu_encrypt_privkey"
version = "0.0.27"
authors = ["uutils developers"]
license = "MIT"
description = "basename ~ (uutils) display PATHNAME with leading directory components removed"

homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/basename"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

readme.workspace = true

[lib]
path = "src/encrypt_privkey.rs"

[dependencies]
clap = { workspace = true }
gnostr-types = "0.7.1-unstable"
libc.workspace = true
rtoolbox = "0.0.1"
uucore = { workspace = true }
zeroize = "1.8.1"

[[bin]]
name = "encrypt-privkey"
path = "src/main.rs"
