[package]
name = "uu_privkey_to_bech32"
version = "0.0.27"
authors = ["uutils developers"]
license = "MIT"
description = "basename ~ (uutils) display PATHNAME with leading directory components removed"

homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/basename"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

readme.workspace = true

[lib]
path = "src/privkey_to_bech32.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true }

[[bin]]
name = "privkey-to-bech32"
path = "src/main.rs"
