[package]
name = "uu_wobble"
version = "0.0.27"
authors = ["uutils developers"]
license = "MIT"
description = "basename ~ (uutils) display PATHNAME with leading directory components removed"

homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/basename"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

readme.workspace = true

[lib]
path = "src/wobble.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }

futures = { version = "0.3.6", default-features = false, features = ["async-await", "executor"] }


[[bin]]
name = "wobble"
path = "src/main.rs"
