[package]
name = "xq-lang"
authors = ["mi_sawa <mi.sawa.1216+git@gmail.com>"]
description = "Lexer, parser and AST of jq."

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }


[dependencies]
thiserror = "1.0.30"
derive_more = "0.99.17"
ordered-float = "2.10.0"
lexgen = "0.10.0"
lexgen_util = "0.10.0"
lalrpop-util = "0.19.7"

[build-dependencies]
lalrpop = "0.19.7"
